--- a/index.html
+++ b/index.html
@@ -9,11 +9,12 @@
   </head>
   <body>
     <div class="outer">
-      <h1>BORDERLANDS 3 REVIEW</h1>
+      <h1>GEARS 5 REVIEW</h1>
+
       <p>Article written by: Michael Claborn</p>
       <article>
         <h2>
-          Bad jokes clash with great guns in a looter shooter lost in time.
+          An acceptable comeback for a behemoth of the genre.
         </h2>
         <section>
           <p>
@@ -84,7 +85,10 @@
             environments are still a few open areas with branching corridors.
             Borderlands' signature comic book style hasn't changed much, but it
             looks significantly sharper in 2019, with characters and sweeping
-            vistas that communicate scale and personality clearer than ever.
+            vistas that communicate scale and personality clearer than ever. A
+            few surprise locations mix things up further, though most
+            environments are still a few open areas with branching corridors.
+            Borderlands' signature comic book
           </p>
           <h3>All your base are belong to us</h3>
 
@@ -95,6 +99,12 @@
             directions. Borderlands 3 usually tests players with a mess of
             enemies in open, multi-tiered arenas, more of a war of attrition
             than a tactical puzzle.
+          </p>
+          <p class="span-all">The Verdict</p>
+          <p>
+            Each location has its own enemy types, but in practice there's not
+            much difference between fighting a swarm of COV soldiers spawning in
+            from all
           </p>
           <img src="img/three.jpg" alt="" />
         </section>
